--- a/config/database.yml
+++ b/config/database.yml
@@ -17,9 +17,10 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: ubuntu
+  pool: 5
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: 5
 
 development:
   <<: *default
